--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1_m2NIdeyBYwt5L704MjIp0WVjYX9jIkB/view">resumelink</a></p>
 	          </div>
           </div>
 
@@ -603,7 +603,7 @@
 					  <li class="ftco-animate"><a href="https://www.youtube.com/@ayushh_lifts01"><span class="icon-youtube"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/ayushpandey1718/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://twitter.com/AYUSH1718PANDEY/"><span class="icon-twitter"></span></a></li>
-					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-facebook"></span></a></li> -->
+					
 				      <li class="ftco-animate"><a href="https://www.instagram.com/ayushpandey__1718____/"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
