added resume folder

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://docs.google.com/document/d/1my8pSQ4_EGWCFOgSF9z2of_87pM9O6VS/edit?usp=drive_link&ouid=114059119109604114516&rtpof=true&sd=true">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1q-nxYDKyX0YMF3A_d-fOlhrCIrqusf6M/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
